public/stylesheets/style.scss
/* ... */
header {
  text-align: center;
  color: $white;
  background-attachment: scroll;
  background-image: url(../images/header-bg.jpg);
  background-position: center center;
  background-repeat: none;
  background-size: cover;
  .intro-text {
    padding-top: 100px;
    padding-bottom: 50px;
    .intro-lead-in {
      margin-bottom: 25px;
      font-family: $font_0, $font_1, $font_2, $font_3, $font_4;
      font-size: 22px;
      font-style: italic;
      line-height: 22px;
    }
    .intro-heading {
      margin-bottom: 25px;
      text-transform: uppercase;
      font-family: $font_5, $font_1, $font_2, $font_3, $font_4;
      font-size: 50px;
      font-weight: 700;
      line-height: 50px;
    }
  }
}

@media (min-width:768px) {
  header .intro-text {
    padding-top: 300px;
    padding-bottom: 200px;
    .intro-lead-in {
      margin-bottom: 25px;
      font-family: $font_0, $font_1, $font_2, $font_3, $font_4;
      font-size: 40px;
      font-style: italic;
      line-height: 40px;
    }
    .intro-heading {
      margin-bottom: 50px;
      text-transform: uppercase;
      font-family: $font_5, $font_1, $font_2, $font_3, $font_4;
      font-size: 75px;
      font-weight: 700;
      line-height: 75px;
    }
  }
}


section {
  padding: 100px 0;
  h2.section-heading {
    margin-top: 0;
    margin-bottom: 15px;
    font-size: 40px;
  }
  h3.section-subheading {
    margin-bottom: 75px;
    text-transform: none;
    font-family: $font_0, $font_1, $font_2, $font_3, $font_4;
    font-size: 16px;
    font-style: italic;
    font-weight: 400;
  }
}
@media (min-width:768px) {
  section {
    padding: 150px 0;
  }
}
.schedule-heading {
  margin: 15px 0;
  text-transform: none;
}

section:nth-child(odd) {
  background-color: $section-inverse-color;
  h2.section-heading {
    color: $white;
  }
  h4.section-heading {
    color: $white;
  }
}

.team-member {
  margin-bottom: 50px;
  text-align: center;
  img {
    margin: 0 auto;
    border: 7px solid $white;
  }
  h4 {
    margin-top: 25px;
    color: $section-inverse-color;
    margin-bottom: 0;
    text-transform: none;
  }
  p {
    margin-top: 0;
  }
}
aside.clients img {
  margin: 50px auto;
}

ul.social-buttons {
    margin-bottom: 0;
}

ul.social-buttons li a {
    display: block;
    width: 40px;
    height: 40px;
    border-radius: 100%;
    font-size: 20px;
    line-height: 40px;
    outline: 0;
    color: #000;
    background-color: #fff;
    -webkit-transition: all .3s;
    -moz-transition: all .3s;
    transition: all .3s;
}

ul.social-buttons li a:hover,
ul.social-buttons li a:focus,
ul.social-buttons li a:active {
    background-color: #fed136;
}


footer {
  padding: 25px 0;
  text-align: center;
  span.copyright {
    text-transform: uppercase;
    text-transform: none;
    font-family: $font_0, $font_1, $font_2, $font_3, $font_4;
    line-height: 40px;
  }
  ul.quicklinks {
    margin-bottom: 0;
    text-transform: uppercase;
    text-transform: none;
    font-family: $font_0, $font_1, $font_2, $font_3, $font_4;
    line-height: 40px;
  }
}
section#contact {
  background-color: $color_log_cabin_approx;
  background-image: url(../images/map-image.png);
  background-position: center;
  background-repeat: no-repeat;
  .section-heading {
    color: $white;
  }
  .form-group {
    margin-bottom: 25px;
    input {
      padding: 20px;
      &.form-control {
        height: auto;
      }
    }
    textarea {
      padding: 20px;
      &.form-control {
        height: 236px;
      }
    }
  }
  &::-webkit-input-placeholder {
    text-transform: uppercase;
    font-family: $font_0, $font_1, $font_2, $font_3, $font_4;
    font-weight: 700;
    color: $color_pink_swan_approx;
  }
  &:-moz-placeholder {
    text-transform: uppercase;
    font-family: $font_0, $font_1, $font_2, $font_3, $font_4;
    font-weight: 700;
    color: $color_pink_swan_approx;
  }
  &::-moz-placeholder {
    text-transform: uppercase;
    font-family: $font_0, $font_1, $font_2, $font_3, $font_4;
    font-weight: 700;
    color: $color_pink_swan_approx;
  }
  &:-ms-input-placeholder {
    text-transform: uppercase;
    font-family: $font_0, $font_1, $font_2, $font_3, $font_4;
    font-weight: 700;
    color: $color_pink_swan_approx;
  }
  .text-danger {
    color: $color_cinnabar_approx;
  }
  .form-control:focus {
    border-color: $color_sunglow_approx;
    //Instead of the line below you could use @includebox-shadow($shadow-1, $shadow-2, $shadow-3, $shadow-4, $shadow-5, $shadow-6, $shadow-7, $shadow-8, $shadow-9, $shadow-10)
    box-shadow: none;
  }
}


@font-face {
  font-family: Humanist777BT;
    src: url('../fonts/humanist-777-bt-1361500798.ttf');
}

@font-face {
  font-family: Raleway;
    src: url('../fonts/Raleway-Light.ttf');
}

@font-face {

  font-family: 'SFNewRepublic'; /*a name to be used later*/
    src: url('../fonts/SF New Republic.ttf'); /*URL to font*/;
}

.userInfo{
  text-align: center;
  height: auto;
  padding: 10px;
  font-family: Raleway;
  background-color: #e8e8e8;
  //    border-radius: 5px;
  margin-bottom: 10px;
/*    margin-right: 10px;*/;
}

.userSkillSet {
  text-align: center;
  height: auto;
  padding: 10px;
  font-family: Raleway;
  background-color: #2b2b2b;
  //    border-radius: 5px;
  margin-bottom: 10px;
/*    margin-right: 10px;*/;
}

.userInfo img {
//  border-radius: 50%;
  border: 0px;
  width: 120px;
}

.userInfo h4 {
  color: #2b2b2b;
}

.userSkillSet h4 {
  color: #e8e8e8;
}

.userInfo p {
  color: #2b2b2b;
  margin-top: -10px;
  text-align: left;
  width: 85%;
  margin: auto;
  margin-top: 5px;
}

.userSkillSet p {
  color: #e8e8e8;
  margin-top: -10px;
  text-align: left;
  width: 85%;
  margin: auto;
  margin-top: 5px;
}

.contentContainer {
  background: #fff;
}

.dash {
  padding: 10px;
  background-color: #2b2b2b;
  //    border-radius: 5px;
}

.dashTab {
  background-color: #646464;
  font-family: Raleway;
  text-align: center;
/*    margin: 10px;*/
/*    width: auto;*/
/*    border-radius: 5px;*/;
}
/* ... */

